test/expected/using_i-c.out
using I = int
^
1: syntax error: "using": unexpected token; not a keyword until C++98
